[package]
name = "cfop-research"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
rubikmaster = { git = "https://github.com/akiradeveloper/rubikmaster" }

[[bin]]
name = "oll-1"
path = "src/oll-1.rs"

[[bin]]
name = "oll-comb"
path = "src/oll-comb.rs"